--- a/plugin.xml
+++ b/plugin.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin>
-	<name>Blogs</name>
+	<name>cloG</name>
 	<key>blogs</key>
 	<description>User blogs with archives, tags, comments and rates</description>
-    <author>Oxwall Foundation</author>
-    <authorEmail>plugins@oxwall.org</authorEmail>
+    <author>CYGO Network & Oxwall Foundation</author>
+    <authorEmail>plugins@oxwall.org, logan@cygonetwork.com</authorEmail>
 	<authorUrl>http://www.oxwall.org/foundation</authorUrl>
 	<developerKey>e547ebcf734341ec11911209d93a1054</developerKey>
-    <build>10800</build>
+    <build>20100</build>
     <copyright>(C) 2009 Oxwall Foundation. All rights reserved.</copyright>
 	<license>The BSD License</license>
     <licenseUrl>http://www.opensource.org/licenses/bsd-license.php</licenseUrl>
